apps/vault/base/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    name: vault
    app: vault
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/audit: privileged
