apps/vault/base/resources/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: virtualservice-vault
  namespace: vault
spec:
  hosts:
    - vault.infra.home.arpa
  gateways:
    - gateway-vault
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: vault.vault.svc.cluster.local
            port:
              number: 8200
